# Rtype

./: CMakeCache.txt  CMakeLists.txt  README.md  conanfile.txt  r-type.sh
CPM_modules/: FindBoost.cmake  FindSFML.cmake  Findasio.cmake
documentation/: server.md
src/Client/: main.cpp
src/Client/include/: CC.hpp  Game.hpp  Menu.hpp  my.h
src/Client/src/: CC.cpp  Game.cpp  Menu.cpp
src/Server/: main.cpp  send_and_recv.cpp
src/Server/include/: Component.hpp  Components.hpp  ECS.hpp  Entity.hpp  ISystem.hpp  Manager.hpp  Objects.hpp  Server.hpp  Store.hpp  System.hpp  systems.hpp
src/Server/src/: ISystem.cpp  Manager.cpp  Objects.cpp  Server.cpp  Store.cpp  System.cpp  systems.cpp
src/Socket/: Socket.cpp  Socket.hpp
